package Entregas.palmaCamila;

public interface IHashable {
    public String generarHash();
}
